Bug fix: improves contrast on portfolio items

--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -33,21 +33,6 @@
         transition: all 250ms ease-in;
         z-index: 1;
 
-        &:before {
-          content: "";
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          z-index: 3;
-          background: rgba(0, 0, 0, .25);
-        }
-
-        &:hover {
-          &:before {
-            background: transparent;
-          }
-        }
-
         .image {
           height: 50%;
           box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .25);
