--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -485,19 +485,6 @@ header .header-info .head-description {
   z-index: 1;
 }
 
-.portfolio .wrapper .portfolio-cards .portfolio-item:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 3;
-  background: rgba(0, 0, 0, 0.25);
-}
-
-.portfolio .wrapper .portfolio-cards .portfolio-item:hover:before {
-  background: transparent;
-}
-
 .portfolio .wrapper .portfolio-cards .portfolio-item .image {
   height: 50%;
   -webkit-box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.25);
